AC_PREREQ(2.66)

#définit les informations sur le programme
AC_INIT([Aqua],
        [0.9.0.1],
        [webmaster@super-annonce.fr])

#initialisation d'automake pour le programme
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AM_PROG_CC_C_O

GTK_REQUIRED_VERSION=2.0.0
GLIB_REQUIRED_VERSION=$GTK_REQUIRED_VERSION

AM_PATH_GLIB_2_0($GLIB_REQUIRED_VERSION,,
  [AC_MSG_ERROR(Test for GLib failed.)], gobject)
AM_PATH_GTK_2_0($GTK_REQUIRED_VERSION,,
  [AC_MSG_ERROR(Test for GTK failed.)])

#fichier Makefile à générer
AC_CONFIG_FILES([
             Makefile 
             src/Makefile 
             data/Makefile 
             images/Makefile 
             ])

#générer les Makefiles
AC_OUTPUT
